// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Badge control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-badge-container"
  >
    Test Component
    <styled.div
      className="ui-badge test-class"
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "blue",
          "border": "solid 3px",
          "color": "red",
        }
      }
    >
      1
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test making the Badge control invisible 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-badge-container"
  >
    <styled.div
      className="ui-badge"
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid 3px",
          "color": "red",
        }
      }
    >
      0
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test retrieval of Badge props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "counter": 0,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "topRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "white",
    "border": "solid 3px",
    "color": "red",
  },
  "suppress": false,
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of a Badge control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-badge-container"
  >
    <styled.div
      className="ui-badge"
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid 3px",
          "color": "red",
        }
      }
    >
      0
    </styled.div>
  </styled.div>
</ThemeProvider>
`;
